--- a/website/templates/style.css
+++ b/website/templates/style.css
@@ -485,6 +485,13 @@ a.navbar-brand:hover {
 	display: block;
 }
 
+.mapillary-viewer-btn {
+	background: rgba(0, 0, 0, .5);
+	color: white;
+	border: none;
+	border-radius: 5px;
+}
+
 
 /* Features list */
 
