--- a/website/templates/components/stats.pug
+++ b/website/templates/components/stats.pug
@@ -222,7 +222,7 @@ script.
 
 			// Notes count + chart
 			if(res.chartNotes) {
-				addBlock(numberFormat.format(res.openedNotes), `notes ouvertes (${res.pctClosedNotes || 0}% résolues)`);
+				addBlock(numberFormat.format(res.openedNotes), `notes ouvertes (${isNaN(res.pctClosedNotes) ? 0 : res.pctClosedNotes}% résolues)`);
 
 				const myChart = new Chart(document.getElementById("stats-chart-notes").getContext("2d"), {
 					type: "line",
