Minor improvements on UI with partial/incomplete projects

--- a/website/templates/pages/multi_projects.pug
+++ b/website/templates/pages/multi_projects.pug
@@ -20,7 +20,7 @@ block content
 					div.col-md-6.col-lg-4.h-100
 						div.media.my-1.p-2(style="background-color: white; border-radius: 10px")
 							a.align-self-center.mr-3(href=`/projects/${proj.id}`)
-								img(src=proj.icon alt="" style="max-width: 100px")
+								img(src=proj.icon alt="" style="height: 100px")
 							div.media-body.align-self-center
 								a.text-decoration-none(href=`/projects/${proj.id}`)= proj.title
 
