--- a/website/templates/common/body_header.pug
+++ b/website/templates/common/body_header.pug
@@ -4,4 +4,4 @@ div.container-fluid.d-none.d-md-block
 			div.col-12.text-center
 				a.blog-header-logo.text-dark(href="/")
 					img.blog-header-logo(src="/images/logo.png" title=__("Projet du mois OpenStreetMap"))
-				p.m-0.mt-2.text-muted(style="line-height: 1.4rem")= __("Catalyseur d'énergies pour OpenStreetMap")
+				p.m-0.mt-2.text-muted(style="line-height: 1.4rem")= __("Catalyseur d'énergies pour OpenStreetMap v%s", CONFIG.package_version)
