--- a/website/templates/pages/project.pug
+++ b/website/templates/pages/project.pug
@@ -19,6 +19,9 @@ block navbar
 	a(href="#data")
 		i.fa.fa-file-download(title=__("Données"))
 		span= __("Données")
+	a(href="/about")
+		i.fa.fa-flag(title=__("A propos"))
+		span= __("A propos")
 
 
 block content
@@ -139,18 +142,3 @@ block content
 										a.text-decoration-none(href=`/projects/${proj.id}`)
 											| #{proj.title}
 											span.text-muted.d-block= new Date(proj.month).toLocaleString('fr-FR', { month: 'long', year: 'numeric' })
-
-
-block prepend footer
-	a#about
-	div.container.text-left
-		div.row
-			div.blog-post.col-md-8.blog-post-readme
-				include:markdown-it ../../../README.md
-			aside.col-md-4.blog-sidebar
-				div.p-4.mb-3.rounded
-					h4.font-italic= __("En savoir plus")
-					ul.list-unstyled.mb-0
-						li: a(href=CONFIG.REPOSITORY_URL rel="noopener")= __("Code source du projet")
-						li: a(href="https://wiki.openstreetmap.org/wiki/FR:Project_of_the_month#Projets_pass.C3.A9s" rel="noopener")= __("Projets précédents")
-						li: a(href="https://openstreetmap.fr" rel="noopener") OpenStreetMap France
